<resources>
    <string name="app_name">Diary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_create_item">CreateItem</string>
    <string name="title_activity_edit_item">EditItem</string>
    <string name="title_activity_manage_items">ManageItems</string>
    <string name="title_activity_view_items">ViewItems</string>


    <string name="title">My \n Diary</string>
    <string name="enter">Enter</string>
    <string name="create">Create new note</string>
    <string name="viewPrev">View previous notes</string>
    <string name="manageNotes">Manage notes</string>
    <string name="typeText">Type text here</string>
    <string name="addPhoto">Add photo</string>
    <string name="subm">Submit</string>
    <string name="back">Back to menu</string>
    <string name="changephoto">Change/add photo</string>
    <string name="cancel">Cancel</string>

</resources>
