<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dominik.diary.CreateItem">

       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="40sp"
        android:id="@+id/titleCreate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleCreate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subm"
            android:id="@+id/SubmitBut"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onSubmitClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPhoto"
            android:id="@+id/AddPhotoBut"
            android:layout_above="@+id/SubmitBut"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/AddPhotoBut"
            android:weightSum="4">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="2" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editText"
                    android:background="#fffff8cc" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/IMG"
                    android:src="@drawable/doge"
                    android:scaleType="fitXY"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
